<resources>
    <string name="app_name">eleEntExtManage</string>
    <string name="logo">logo</string>
    <string name="login_id">ログインID</string>
    <string name="password">パスワード</string>
    <string name="login">ログイン</string>
    <string name="cancel">キャンセル</string>
    <string name="login_error_message">ログインできませんでした。\nログインID・パスワードを確認して下さい。</string>
    <string name="menu">メニュー</string>
    <string name="receipt">入庫</string>
    <string name="storage">蔵置</string>
    <string name="move">移動</string>
    <string name="packing_change">梱包変更</string>
    <string name="setting">設定</string>
    <string name="reader">リーダー</string>
    <string name="connect">接続</string>
    <string name="receive">受信</string>
    <string name="detail">明細</string>
    <string name="previous">前へ</string>
    <string name="confirm">確定</string>
    <string name="tag_issue">荷札発行</string>
    <string name="confirm_and_send">確定・送信</string>
    <string name="login_id_text">ID : </string>
    <string name="button_label_finish">完了</string>
    <string name="button_label_multiple_packing">複数梱包</string>
    <string name="button_label_final_packing">最終梱包</string>
    <string name="button_label_instructions_check">指示内容確認</string>
    <string name="button_label_on_hold">保留</string>
    <string name="button_label_qr">QR</string>
    <string name="button_label_rfid">RFID</string>
    <string name="common_list_header_cno_slash">C/No</string>
    <string name="common_list_header_remarks">備考</string>
    <string name="common_list_header_branch_no">枝番</string>
    <string name="common_label_invoice_no">Invoice番号：</string>
    <string name="common_label_reply_date">リスト返信希望日：</string>
    <string name="common_label_ship_date">出荷日：</string>
    <string name="common_label_read_count">読取件数：</string>
    <string name="common_label_receipt_day">入庫日</string>
    <string name="common_label_carton_count">カートン数：</string>
    <string name="common_view_off_book">簿外あり</string>
    <string name="common_check_instructions">/梱包指示確認</string>
    <string name="common_check_shipping_instructions">/出荷指示確認</string>
    <string name="common_list_header_packing_quantity_coron">梱包数：</string>
    <string name="common_list_header_cno_slash_coron">C/No：</string>
    <string name="common_list_header_lwh_coron">LWH：</string>
    <string name="common_list_header_nw_coron">NW：</string>
    <string name="common_list_header_gw_coron">GW：</string>
    <string name="common_list_header_remarks_coron">備考：</string>
    <string name="common_list_header_count">件</string>
    <string name="common_list_header_no">No</string>
    <string name="common_list_header_stock">在庫数量</string>
    <string name="common_list_header_shipment_quantity">出荷数量</string>
    <string name="common_list_header_shipment_unit">出荷単位</string>
    <string name="common_list_header_packing_form">梱包形態</string>
    <string name="common_list_header_over_pack">オーバーパック</string>
    <string name="common_pickingdata_del_message">ピッキング作業内容は破棄されます。\nよろしいですか？</string>
    <string name="common_packingdata_del_message">梱包作業内容は破棄されます。\nよろしいですか？</string>
    <string name="common_singlepackingdata_del_message">変更した単独梱包内容は破棄されます。\nよろしいですか？</string>
    <string name="common_finalpackingdata_del_message">変更した最終梱包内容は破棄されます。\nよろしいですか？</string>
    <string name="common_multiplepackingdata_del_message">変更した複数梱包内容は破棄されます。\nよろしいですか？</string>
    <string name="common_casemark_paste_scandata_del_message">ケースマーク貼付作業内容は破棄されます。\nよろしいですか？</string>
    <string name="common_issue_regist_sacandata_del_message">出庫確認作業内容は破棄されます。\nよろしいですか？</string>
    <string name="screen_id_menu">M01</string>
    <string name="screen_id_setting_menu">Y01</string>
    <string name="screen_id_setting_device">Y02</string>
    <string name="screen_id_setting_rfid">Y03</string>
    <string name="screen_id_pairing_reader">Y04</string>
    <string name="screen_id_picking_search">P01</string>
    <string name="screen_id_picking_scan">P02</string>
    <string name="screen_id_picking_offbook">P03</string>
    <string name="screen_id_packing_search">K01</string>
    <string name="screen_id_packing_list">K02</string>
    <string name="screen_id_packing_scan">K03</string>
    <string name="screen_id_packing_offbook">K04</string>
    <string name="screen_id_packing_single">K05</string>
    <string name="screen_id_packing_final">K06</string>
    <string name="screen_id_packing_multiple">K07</string>
    <string name="screen_id_casemark_print">C01</string>
    <string name="screen_id_casemark_paste_read">C02</string>
    <string name="screen_id_casemark_paste_detail">C03</string>
    <string name="screen_id_casemark_paste_scan">C04</string>
    <string name="screen_id_casemark_paste_offbook">C05</string>
    <string name="screen_id_registration_search">S01</string>
    <string name="screen_id_registration_check">S02</string>
    <string name="screen_id_cargo_status_check">X01</string>
    <string name="screen_id_check_inst_p">P04</string>
    <string name="screen_id_check_inst_k">K08</string>
    <string name="screen_id_check_shipping_inst_p">P05</string>
    <string name="screen_id_check_shipping_inst_k">K09</string>
    <string name="screen_id_printing_related_p">P06</string>
    <string name="screen_id_printing_related_k">K10</string>
    <string name="set_password">パスワード変更</string>
    <string name="title_set_password">新しいパスワードを設定してください</string>
    <string name="new_password">新しいパスワード</string>
    <string name="new_password_confirmation">新しいパスワード(確認用)</string>
    <string name="picking">ピッキング</string>
    <string name="picking_invoice_search">/Invoice検索</string>
    <string name="picking_invoice_scan">/貨物スキャン</string>
    <string name="picking_invoice_scan_off_book">/簿外確認</string>
    <string name="picking_list_header_cool">保冷</string>
    <string name="picking_list_header_dangerous">危険品</string>
    <string name="cargo_scan_label_location_no">ロケ番号：</string>
    <string name="cargo_scan_list_header_ref_stock">参考在庫数量</string>
    <string name="cargo_scan_list_header_packing">入荷荷姿</string>
    <string name="cargo_scan_msg_location_no_read">ロケーション番号を読み取ってください</string>
    <string name="cargo_scan_msg_location_no_title">ロケ番号：</string>
    <string name="cargo_scan_msg_cargo_read">荷札を読み取って下さい</string>
    <string name="off_book_confirm_view_off_book">簿外</string>
    <string name="invoice_no_appended">Invoice番号毎指示添付</string>
    <string name="title_printing_related">/印刷関連</string>
    <string name="printing_related_button_download">ダウンロード</string>
    <string name="printing_related_button_printing">印刷</string>
    <string name="packing">梱包</string>
    <string name="packing_invoice_search">/Invoice検索</string>
    <string name="packing_list">/梱包一覧</string>
    <string name="packing_scan">/梱包スキャン</string>
    <string name="final_packing_input">/最終梱包入力</string>
    <string name="packing_single_packing_input">/単独梱包入力</string>
    <string name="packing_multiple_packing">/複数梱包指示</string>
    <string name="final_packing_explanation">最終出庫荷姿に対する作業内容の登録</string>
    <string name="single_packing_explanation">１明細に対する作業内容の登録</string>
    <string name="multiple_packing_explanation">複数明細→１内装梱包の作業内容の登録</string>
    <string name="packing_list_destination">仕向け地：</string>
    <string name="packing_list_header_final_packing_appearance">最終梱包荷姿</string>
    <string name="packing_list_header_inner_package">インナーパッケージ</string>
    <string name="packing_list_button_label_cancel">取消</string>
    <string name="packing_list_button_label_new">新規</string>
    <string name="packing_scan_header_over_pack">複数\n梱包</string>
    <string name="packing_scan_header_stock_quantity">在庫\n数量</string>
    <string name="packing_scan_header_shipment_quantity">出荷\n数量</string>
    <string name="packing_scan_header_shipment_unit">出荷\n単位</string>
    <string name="packing_scan_header_receipt_appearance">入庫\n荷姿</string>
    <string name="packing_scan_header_bundled_number">同梱\n番号</string>
    <string name="packing_scan_button_label_single_packaging">単独梱包</string>
    <string name="packing_attached_header_invoice_packing">Invoice梱包指示</string>
    <string name="packing_attached_header_line_packing_method">行梱包方法</string>
    <string name="packing_attached_header_ice_pack">保冷剤</string>
    <string name="packing_attached_header_packing">入庫荷姿</string>
    <string name="packing_attached_destination">仕向地：</string>
    <string name="packing_single_packaging_dangerous_goods_packing">危険品梱包</string>
    <string name="packing_single_packaging_internal_capacity">内容量</string>
    <string name="packing_single_packaging_unit">単位</string>
    <string name="packing_single_packaging_interior_container">内装容器</string>
    <string name="packing_single_packaging_danger_number">内装容器数</string>
    <string name="packing_single_packaging_outer_container">外装容器</string>
    <string name="packing_single_packaging_number_of_outer_container">外装容器個数</string>
    <string name="packing_single_packaging_same_item">同一明細あり</string>
    <string name="final_packing_input_label_blue_ice">ブルーアイス(KG)</string>
    <string name="final_packing_input_label_dry_ice">ドライアイス(KG)</string>
    <string name="final_packing_input_button_label_input">入力</string>
    <string name="final_packing_input_label_packing_name">梱包名</string>
    <string name="final_packing_input_label_palette_breakdown">パレット内訳</string>
    <string name="l_label">L(cm)</string>
    <string name="w_label">W(cm)</string>
    <string name="h_label">H(cm)</string>
    <string name="multiple_date">複数日付</string>
    <string name="packing_material_1">梱包資材1</string>
    <string name="packing_material_2">梱包資材2</string>
    <string name="casemark">ケースマーク</string>
    <string name="casemark_print">/印刷</string>
    <string name="print_status">印刷状態</string>
    <string name="casemark_paste">ケースマーク貼付</string>
    <string name="casemark_read">/ケースマーク読取</string>
    <string name="casemark_detail">/ケースマーク詳細</string>
    <string name="casemark_scan">/貨物スキャン</string>
    <string name="casemark_offbook">/簿外確認</string>
    <string name="casemark_paset_read_message">貼付するケースマークをスキャンして下さい。</string>
    <string name="casemark_no">ケースマーク\n番号</string>
    <string name="casemark_manage_pw">パスワード</string>
    <string name="issue">出庫</string>
    <string name="issue_registration">出庫登録</string>
    <string name="issue_registration_invoice_search">/Invoice検索</string>
    <string name="issue_registration_confirm">/出庫確認</string>
    <string name="check_shortage">不足確認</string>
    <string name="shortage_casmark">不足C/No</string>
    <string name="shortage_casmark_invoice_no">Invoice番号：</string>
    <string name="issue_mask">出庫登録</string>
    <string name="cargostatus_message">荷札をスキャンしてください</string>
    <string name="input_case_mark_no_msg">登録するC/Noを入力\n連番ではない場合は、カンマ区切入力</string>
    <string name="input_case_mark_no_tilde">～</string>
    <string name="device_setting">端末設定</string>
    <string name="rfid_setting">RFID設定</string>
    <string name="terminalID">端末ID</string>
    <string name="affiliation_base">所属拠点</string>
    <string name="access_point">API接続先</string>
    <string name="session">セッション</string>
    <string name="power_level">アンテナ出力</string>
    <string name="channel">チャンネル</string>
    <string name="buzzer">Beep音</string>
    <string name="order_no">受注番号</string>
    <string name="item_code">品目コード</string>
    <string name="item_name">品目名</string>
    <string name="purchase_order_no">発注番号</string>
    <string name="deadline">締め日</string>
    <string name="packing_date">梱包日</string>
    <string name="si_slash_no">SI/No</string>
    <string name="invoice_no">Invoice番号</string>
    <string name="destination">仕向地</string>
    <string name="packing_instruction">梱包指示</string>
    <string name="shipment_quantity_total">出荷数量合計</string>
    <string name="shipment_unit">出荷単位</string>
    <string name="location_no">ロケ番号</string>
    <string name="c_slash_no">C/No</string>
    <string name="l">L</string>
    <string name="w">W</string>
    <string name="h">H</string>
    <string name="weight">重量</string>
</resources>