<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#C00000">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.03"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/common_list_header_no"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.04"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/packing_scan_header_over_pack"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/purchase_order_no"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.04"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/common_list_header_branch_no"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/order_no"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.11"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/item_code"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.11"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.06"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/packing_scan_header_stock_quantity"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.06"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/packing_scan_header_shipment_quantity"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.06"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/shipment_quantity_total"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView39"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.05"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/packing_scan_header_shipment_unit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_extra_large" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.04"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/packing_scan_header_receipt_appearance"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_extra_large"/>

    <TextView
        android:id="@+id/textView41"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.04"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/packing_scan_header_bundled_number"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_extra_large" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.09"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text="@string/common_label_receipt_day"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_extra_large" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.07"
        android:background="@drawable/text_black_border"
        android:gravity="center"
        android:text=" "
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_extra_large" />

</LinearLayout>