<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#C00000">

    <TextView
        android:id="@+id/tv_casemark_paste_scan_no"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.04"
        android:gravity="center"
        android:text="@string/common_list_header_no"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/tv_casemark_paste_scan_cno"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.06"
        android:gravity="center"
        android:text="@string/common_list_header_cno_slash"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border"/>

    <TextView
        android:id="@+id/tv_casemark_paste_scan_purchase_order_no"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.11"
        android:gravity="center"
        android:text="@string/purchase_order_no"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/tv_casemark_paste_scan_branch_no"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.06"
        android:gravity="center"
        android:text="@string/common_list_header_branch_no"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border"/>

    <TextView
        android:id="@+id/tv_casemark_paste_scan_order_no"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.11"
        android:gravity="center"
        android:text="@string/order_no"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border"/>

    <TextView
        android:id="@+id/tv_casemark_paste_scan_item_code"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.10"
        android:gravity="center"
        android:text="@string/item_code"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/tv_casemark_paste_scan_item_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.18"
        android:gravity="center"
        android:text="@string/item_name"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/tv_casemark_paste_scan_stock"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.09"
        android:gravity="center"
        android:text="@string/common_list_header_stock"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border"/>

    <TextView
        android:id="@+id/tv_casemark_paste_scan_shipment_quantity"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.09"
        android:gravity="center"
        android:text="@string/common_list_header_shipment_quantity"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/tv_casemark_paste_scan_shipment_unit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.07"
        android:gravity="center"
        android:text="@string/common_list_header_shipment_unit"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border"/>

    <TextView
        android:id="@+id/tv_casemark_paste_scan_packing_form"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.07"
        android:gravity="center"
        android:text="@string/common_list_header_packing_form"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_list_header"
        android:background="@drawable/text_black_border" />

</LinearLayout>