<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:minHeight="50dp"
    android:background="#C00000">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.11"
        android:gravity="center"
        android:text="@string/c_slash_no"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.14"
        android:gravity="center"
        android:text="@string/packing_list_header_final_packing_appearance"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/text_black_border"/>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.11"
        android:gravity="center"
        android:text="@string/l"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/text_black_border"/>

    <TextView
        android:id="@+id/textView31"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.11"
        android:gravity="center"
        android:text="@string/w"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.11"
        android:gravity="center"
        android:text="@string/h"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.12"
        android:gravity="center"
        android:text="@string/weight"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/text_black_border"/>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.16"
        android:gravity="center"
        android:text="@string/packing_list_header_inner_package"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/text_black_border" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.13"
        android:gravity="center_vertical"
        android:text=" "
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/text_black_border"/>

</LinearLayout>